# stm32f1_prj

./: .clangd  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  make.bat  test.ioc
Core/Inc/: flash.h  gpio.h  log_config.h  stm32f1xx_hal_conf.h
Core/Src/: boot.c  cli.c  cli_commands.c  log_port_stm32f1.c  main.c  stm32f1xx_it.c
Drivers/: CMakeLists.txt
app/: CMakeLists.txt  Makefile  STM32F103C8Tx_FLASH.ld  startup_stm32f103xb.s
app/Core/Inc/: flash.h  log_config.h  prj_define.h  stm32f1xx_hal_conf.h
app/Core/Src/: cli.c  cli_commands.c  gpio.c  log.c  main.c  stm32f1xx_hal_msp.c  sysmem.c
arch/arm/: fault_s.s  reset.s  swap_helper.s  vector_table.h  vector_table.s
bootloader/: CMakeLists.txt  Makefile  STM32F103C8Tx_FLASH.ld
bootloader/Core/Inc/: boot.h  gpio.h
bootloader/Core/Src/: cli_commands.c  main.c
cmake/: arm-none-eabi.cmake
components/: CMakeLists.txt
components/cli/: cli.c
components/flash/: flash.c
components/include/cli/: cli.h  cli_commands.h
components/include/flash/: flash.h
components/include/log/: log.h  log_port.h
components/log/: log.c  log_port_stm32f1.c
drivers/: CMakeLists.txt  device.c
drivers/gpio/: CMakeLists.txt  gpio_stm32f1.c  gpio_stm32f1.h
include/: device.h  init.h  kernel.h
include/drivers/: flash.h  gpio.h  uart.h
include/sys/: __assert.h  iterable_sections.h
include/toolchain/: gcc.h
kernel/: CMakeLists.txt  device.c  init.c  sched.c
modules/: CMakeLists.txt
